--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: "Reversing.AC"
+title: "Reversing.AC - The way to stay under radars"
 bye_message: "~"
-baseurl: "https://cpz.github.io"
+baseurl: "/"
 url: "https://cpz.github.io"
 disqus: 0og
 
