--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: "Reversing.AC - The way to stay under radars"
 bye_message: "~"
 baseurl: "/"
-url: "https://cpz.github.io"
+url: "https://cpz.github.io/"
 disqus: 0og
 
 # Header settings
